# glacier-backup

./: .gitignore  README.md  glacier_input_list.csv  glacier_script.py  pyproject.toml  requirements.txt  setup.py  test_filedata.py
extra/traffic_shaping/: 1.setup_tc_queue.sh  generate_rules_file.py  ip_rules.sh
glacier_backup/: archiver.py  backup_runner.py  csv_input_row.py  dummy_s3_client.py  file_data.py  glacier_uploader.py  gpg_util.py  s3_client.py  sns_notification_adapter.py
tests/: backup_runner_r.py  test_filedata.py  test_input_list.csv
