# TODO: add script bin/create_archives.py
[project]
name = "glacier-backup"
version = "0.2b2"
description = "Glacier backup package"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.3",
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "click>=8.1.8",
    "pandas>=2.2.3",
    "python-gnupg>=0.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
