[project]
name = "glacier-backup"
version = "0.2b2"
description = "Glacier backup package"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "python-gnupg>=0.5.4",
]

[dependency-groups]
dev = [
    "awscli>=1.38.32",
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]
